# skill-manager

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README_zh.md
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-03-25-filesystem-source-of-truth.md
docs/superpowers/specs/: 2026-03-25-filesystem-source-of-truth-design.md
scripts/: runai-client-install.ps1  runai-client-install.sh  runai-client-uninstall.ps1  runai-client-uninstall.sh
src/: lib.rs  server.rs  test_support.rs
src/cli/: mod.LLM.md  mod.rs
src/core/: auto_group.LLM.md  backup.LLM.md  bm25.rs  channel.LLM.md  classifier.LLM.md  cli_target.LLM.md  cli_target.rs  config_watcher.LLM.md  config_watcher.rs  dazi.LLM.md  dazi.rs  db.LLM.md  db.rs  doctor.LLM.md  doctor.rs  group.LLM.md  installer.LLM.md  installer.rs  linker.LLM.md  linker.rs  manager.LLM.md  manager.rs  market.LLM.md  market.rs  mcp_canonical.LLM.md  mcp_canonical.rs  mcp_discovery.LLM.md  mcp_register.LLM.md  mcp_register.rs  mod.rs  paths.LLM.md  paths.rs  recommend.LLM.md  recommend.rs  resource.LLM.md  scanner.LLM.md  scanner.rs  transcript_stats.rs  updater.LLM.md  updater.rs
src/core/prompts/: hook_multi.md  hook_output.md  hook_pointer.md  recommend_cwd_prefix.md  recommend_system.md  recommend_user.md
src/mcp/: dazi_tools.LLM.md  dazi_tools.rs  tools.LLM.md  tools.rs
src/tui/: app.LLM.md  app.rs  i18n.LLM.md  i18n.rs  mod.rs  theme.LLM.md  theme.rs  ui.LLM.md  ui.rs
tests/: cli_target_symmetry.rs  install_test.rs  mcp_canonical_e2e.rs  mcp_stdio_test.rs  router_skill_lifecycle.rs  safety_e2e.rs
