[package]
name = "runai"
version = "0.9.1"
edition = "2024"
description = "AI CLI resource manager for skills and MCP servers"
authors = ["Crosery"]

[dependencies]
# Database
rusqlite = { version = "0.39", features = ["bundled"] }

# CLI
clap = { version = "4.6", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP (GitHub install)
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
tokio = { version = "1", features = ["full"] }

# MCP
rmcp = { version = "1.3", features = ["server", "transport-io"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Utilities
dirs = "6.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
flate2 = "1"
tar = "0.4"
zip = "2"
tempfile = "3"
semver = "1"

[profile.release]
strip = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
